chrome/browser/ui/layout_constants.cc
@@ -11,7 +11,7 @@
 int GetLayoutConstant(LayoutConstant constant) {
   const int kFindBarVerticalOffset[] = {1, 6, 6};
   const int kIconLabelViewInternalPadding[] = {3, 2, 2};
-  const int kIconLabelViewTrailingPadding[] = {2, 8, 8};
+  const int kIconLabelViewTrailingPadding[] = {2, 3, 3};
   const int kLocationBarBorderThickness[] = {2, 1, 1};
   const int kLocationBarBubbleFontVerticalPadding[] = {1, 2, 4};
   const int kLocationBarBubbleHorizontalPadding[] = {1, 4, 4};
